# custom-fragment-shader-4Snaptchat-Spectacles

./: README.md
deviceApp/: CMakeLists.txt  clean.sh  prebuild.sh
deviceApp/ShaderToy/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CPackSourceConfig.cmake  CubeDelegate.cpp  CubeDelegate.hpp  CubeGL.cpp  CubeGL.hpp  build.ninja  cmake_install.cmake  install_manifest_CubeSampleComponent.txt
deviceApp/ShaderToy/CubeSample/: cmake_install.cmake
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/: CPackConfigCubeSampleComponent.cmake
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/aar/: AndroidManifest.xml  build.gradle
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/: build.gradle
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/intermediates/compatible_screen_manifest/release/: output-metadata.json
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/intermediates/dex/release/mergeDexRelease/: classes.dex
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/intermediates/dex_archive_input_jar_hashes/release/: out
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/intermediates/incremental/mergeReleaseAssets/: merger.xml
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/intermediates/incremental/mergeReleaseJniLibFolders/: merger.xml
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/intermediates/incremental/mergeReleaseResources/: compile-file-map.properties  merger.xml
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/intermediates/incremental/mergeReleaseResources/merged.dir/values/: values.xml
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/intermediates/incremental/mergeReleaseShaders/: merger.xml
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/intermediates/incremental/packageRelease/tmp/release/: dex-renamer-state.txt
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/intermediates/incremental/release-mergeNativeLibs/: merge-state
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/intermediates/manifest_merge_blame_file/release/: manifest-merger-blame-release-report.txt
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/intermediates/merged_manifests/release/: AndroidManifest.xml  output-metadata.json
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/intermediates/packaged_manifests/release/: output-metadata.json
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/intermediates/res/merged/release/: values_values.arsc.flat
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/intermediates/runtime_symbol_list/release/: R.txt
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/intermediates/sdk_dependency_data/release/: sdkDependencyData.pb
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/outputs/apk/release/: output-metadata.json
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/outputs/logs/: manifest-merger-release-report.txt
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/reports/: lint-results-release-fatal.html
deviceApp/ShaderToy/CubeSample/apk_bundle_CubeSample/apk/tmp/compileReleaseJavaWithJavac/: source-classes-mapping.txt
deviceApp/ShaderToy/CubeSample/apk_bundle_RedCubeSample/: CPackConfigRedCubeSampleComponent.cmake
deviceApp/ShaderToy/CubeSample/apk_bundle_RedCubeSample/aar/: AndroidManifest.xml  build.gradle
deviceApp/ShaderToy/CubeSample/apk_bundle_RedCubeSample/apk/: AndroidManifest.xml  build.gradle
deviceApp/ShaderToy/assets/: cmd.txt
deviceApp/ShaderToy/assets_redcube/: cmd.txt
deviceApp/ShaderToy/vainilla/: CubeDelegate.cpp  CubeDelegate.hpp  CubeGL.cpp  CubeGL.hpp
(+16 files in other folders)
